<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5pt"
        android:layout_marginEnd="5pt"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="45sp"
        app:autoSizeMaxTextSize="45sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/degButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/degButton"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/radButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/radButton"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/sinButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/sinButton"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/cosButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cosButton"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/tanButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tanButton"
                android:visibility="visible"
                tools:visibility="visible" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/powButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/lgButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/lgButton"
                android:visibility="visible" />

            <Button
                android:id="@+id/lnButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/lnButton"
                android:visibility="visible" />

            <Button
                android:id="@+id/openBracketButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/openBracketButton"
                android:visibility="visible"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/closeBracketButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/closeBracketButton"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sqrtButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/clearButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/clearButton"
                android:visibility="visible" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/ActionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:visibility="visible"
                app:iconTintMode="src_over" />

            <Button
                android:id="@+id/percentButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/divideButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/factorialButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/n7Button"
                style="@style/NumberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n7Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n8Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n8Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n9Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n9Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/reverseButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/n4Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n4Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n5Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n5Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n6Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n6Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/subtractButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/piButton"
                style="@style/FunctionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/piButton"
                android:textSize="20sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/n1Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n1Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n2Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n2Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/n3Button"
                style="@style/NumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n3Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/addButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/moreLessButton"
                style="@style/FunctionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:visibility="visible" />

            <Button
                android:id="@+id/eButton"
                style="@style/NumberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/eButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="visible" />

            <Button
                android:id="@+id/n0Button"
                style="@style/NumberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/n0Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/floatButton"
                style="@style/NumberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/floatButton"
                android:visibility="visible" />

            <Button
                android:id="@+id/equalsButton"
                style="@style/ActionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5pt"
        android:layout_marginEnd="5pt"
        android:text="@string/n0Button"
        android:textAlignment="viewEnd"
        android:textColor="#737373"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/tl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>